--- a/docs/Looksrare_Comprehensive_Review.mdx
+++ b/docs/Looksrare_Comprehensive_Review.mdx
@@ -152,7 +152,7 @@ Similarly, early adopters who trade NFTs through LooksRare receive additional tr
 
 Each day, trade awards are computed based on each user's LooksRare trading volume as a proportion of all daily trading volume on the site, excluding private sales.
 
-`User A's trading rewards on Day 1 = c * a / b`
+`User A's trading rewards on Day 1 = c * (a / b)`
 
 Where:
 
@@ -175,7 +175,7 @@ LooksRare charges a baseline 2% (in WETH) sales fee on all NFT transactions asid
 
 At the conclusion of the preceding period, incentives are calculated for each day and divided between active and passive stakeholder groups before being given out. Passive staking does not result in more Looks being earned when staked, which is the fundamental distinction between active and passive stakers. The bulk of stakers, whose staked LOOKS tokens are fully unlocked, are **active stakers**. The term "passive stakers" refers to holders of Team, Treasury, and Strategic sale tokens, which are locked for trade but unlocked for staking (which unlock over time - [learn more](https://docs.looksrare.org/about/looks-tokenomics)).
 
-A part of the WETH fees earned during the previous 6,500 blocks is sent to the Passive Staking address at the beginning of each 6,500 block period. The amount is determined as follows: `c * a / b`
+A part of the WETH fees earned during the previous 6,500 blocks is sent to the Passive Staking address at the beginning of each 6,500 block period. The amount is determined as follows: `c * (a / b)`
 
 Where:
 
